image displays added

--- a/index.html
+++ b/index.html
@@ -2,30 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Landing Page</title>
+        <title>Legendary Randomizer</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <div class="header">
-            <div class="topbar">
-                <!--
-                <div class="header-logo">
-                    Header Logo
-                </div>
-                <div class="container">
-                    <div class="item">
-                        Header Link 1
-                    </div>
-                    <div class="item">
-                        Header Link 2
-                    </div class="item">
-                    <div class="item">
-                        Header Link 3
-                    </div>
-                </div>
-            -->
-            </div>
             <div class="hero">
                 <div class="content">
                     <div class="hero-main">
@@ -34,13 +16,12 @@
                     <div class="hero-secondary">
                         For 3 players
                     </div>
-                    <button class="sign-up">Assemble</button>
+                    <button class="assemble">Assemble!</button>
                     <div class="setup"></div>
                 </div>
                 <img class="hero-img" src="images/avengers1.jpg">
             </div>
         </div>
-        <!--
         <div class="main">
             <div class="image-row">
                 <div class="image-block">
@@ -58,10 +39,21 @@
                 <div class="image-block">
                     <img class="image">
                     <div>this is some subtext under an illustration or image</div>
-
+                </div>
+                <div class="image-block">
+                    <img class="image">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    VS
+                </div>
+                <div class="image-block">
+                    <img class="image">
+                    <div>this is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
+        <!--
         <div class="quote-block">
             <p class="quote">This is an inspiring quote, or a testominal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p> 
             <p class="quote-author">-Thor, God of Thunder</p> 
@@ -70,7 +62,6 @@
             
         </div>
         -->
-
         <script src="javascript.js"></script>
     </body>
 </html>
