--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img class="image">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
-                <div>
+                <div class="vs">
                     VS
                 </div>
                 <div class="image-block">
